@@ -45,8 +45,8 @@ public class PlaynextCmd extends DJCommand
         this.arguments = "<title|URL>";
         this.help = "plays a single song next";
         this.aliases = bot.getConfig().getAliases(this.name);
-        this.setBeListening(true);
-        this.setBePlaying(false);
+        this.beListening = true;
+        this.bePlaying = false;
     }
     
     @Override
@@ -57,10 +57,10 @@ public class PlaynextCmd extends DJCommand
             event.replyWarning("Please include a song title or URL!");
             return;
         }
-        String args = event.getArgs().startsWith("<") && event.getArgs().endsWith(">") 
+        var args = event.getArgs().startsWith("<") && event.getArgs().endsWith(">")
                 ? event.getArgs().substring(1,event.getArgs().length()-1) 
-                : event.getArgs().isEmpty() ? event.getMessage().getAttachments().get(0).getUrl() : event.getArgs();
-        event.reply(loadingEmoji+" Loading... `["+args+"]`", m -> getBot().getPlayerManager().loadItemOrdered(event.getGuild(), args, new ResultHandler(m,event,false)));
+                : event.getArgs().isEmpty() ? event.getMessage().getAttachments().getFirst().getUrl() : event.getArgs();
+        event.reply(loadingEmoji+" Loading... `["+args+"]`", m -> bot.getPlayerManager().loadItemOrdered(event.getGuild(), args, new ResultHandler(m,event,false)));
     }
     
     private final class ResultHandler implements AudioLoadResultHandler
@@ -78,15 +78,15 @@ public class PlaynextCmd extends DJCommand
         
         private void loadSingle(AudioTrack track)
         {
-            if(getBot().getConfig().isTooLong(track))
+            if(bot.getConfig().isTooLong(track))
             {
                 m.editMessage(FormatUtil.filter(event.getClient().getWarning()+" This track (**"+track.getInfo().title+"**) is longer than the allowed maximum: `"
-                        + TimeUtil.formatTime(track.getDuration())+"` > `"+ TimeUtil.formatTime(getBot().getConfig().getMaxSeconds()*1000)+"`")).queue();
+                        + TimeUtil.formatTime(track.getDuration())+"` > `"+ TimeUtil.formatTime(bot.getConfig().getMaxSeconds()*1000)+"`")).queue();
                 return;
             }
-            AudioHandler handler = (AudioHandler)event.getGuild().getAudioManager().getSendingHandler();
-            int pos = handler.addTrackToFront(new QueuedTrack(track, RequestMetadata.fromResultHandler(track, event)))+1;
-            String addMsg = FormatUtil.filter(event.getClient().getSuccess()+" Added **"+track.getInfo().title
+            var handler = (AudioHandler)event.getGuild().getAudioManager().getSendingHandler();
+            var pos = handler.addTrackToFront(new QueuedTrack(track, RequestMetadata.fromResultHandler(track, event)))+1;
+            var addMsg = FormatUtil.filter(event.getClient().getSuccess()+" Added **"+track.getInfo().title
                     +"** (`"+ TimeUtil.formatTime(track.getDuration())+"`) "+(pos==0?"to begin playing":" to the queue at position "+pos));
             m.editMessage(addMsg).queue();
         }
@@ -94,7 +94,7 @@ public class PlaynextCmd extends DJCommand
         @Override
         public void trackLoaded(AudioTrack track)
         {
-            loadSingle(track);
+            this.loadSingle(track);
         }
 
         @Override
@@ -102,12 +102,12 @@ public class PlaynextCmd extends DJCommand
         {
             AudioTrack single;
             if(playlist.getTracks().size()==1 || playlist.isSearchResult())
-                single = playlist.getSelectedTrack()==null ? playlist.getTracks().get(0) : playlist.getSelectedTrack();
+                single = playlist.getSelectedTrack()==null ? playlist.getTracks().getFirst() : playlist.getSelectedTrack();
             else if (playlist.getSelectedTrack()!=null)
                 single = playlist.getSelectedTrack();
             else
-                single = playlist.getTracks().get(0);
-            loadSingle(single);
+                single = playlist.getTracks().getFirst();
+            this.loadSingle(single);
         }
 
         @Override
@@ -116,7 +116,7 @@ public class PlaynextCmd extends DJCommand
             if(ytsearch)
                 m.editMessage(FormatUtil.filter(event.getClient().getWarning()+" No results found for `"+event.getArgs()+"`.")).queue();
             else
-                getBot().getPlayerManager().loadItemOrdered(event.getGuild(), "ytsearch:"+event.getArgs(), new ResultHandler(m,event,true));
+                bot.getPlayerManager().loadItemOrdered(event.getGuild(), "ytsearch:"+event.getArgs(), new ResultHandler(m,event,true));
         }
 
         @Override
